# lantype

./: .gitignore  AGENTS.md  Cargo.toml  Info.plist  Makefile  README.md  entitlements.plist  package.sh  tauri.conf.json
capabilities/: default.json
docs/superpowers/plans/: 2026-06-29-connected-devices-plan.md
docs/superpowers/specs/: 2026-06-29-connected-devices-design.md
icons/: icon.icns
src/: lib.rs  main.rs  phone.rs  qr.rs  tray.rs
src/core/: config.rs  keyboard.rs  mdns.rs  mod.rs  protocol.rs  ws.rs
web/: index.html  phone.html
web/phone/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/phone/src/: app.tsx  main.tsx  types.ts
