[package]
name = "lantype"
version = "0.1.0"
edition = "2021"

[package.metadata]
icons = ["icons/icon.ico", "icons/icon.png"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
mdns-sd = "0.12"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
enigo = "0.2"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
base64 = "0.22"
url = "2"
local-ip-address = "0.6"